# Mario_FPGA

./: .gitignore  README.md  Sprite-0001.aseprite
assets/: PALETTE.txt  level_1_1.csv
assets/gfx/: goomba_squished.txt  goomba_walk1.txt  goomba_walk2.txt  mario_idle.txt  mario_jump.txt  mario_walk1.txt  mario_walk2.txt  tile_block.txt  tile_brick.txt  tile_bush.txt  tile_cloud.txt  tile_ground.txt  tile_pipe_body.txt  tile_pipe_top.txt
fpga/: BUILD.md  LIGACOES_BDF.md  SuperMario.qpf  SuperMario.qsf  soc_system.qsys
fpga/hdl/: SuperMario_top.v  framebuffer_bridge.v  key_pio.v  vga_scanout.v
fpga/ip/: _hdl_paths.tcl  framebuffer_bridge_hw.tcl  key_pio_hw.tcl  mario_ip.ipx
scripts/: test_level.py  validate_project.sh
software/: CMakeLists.txt  Makefile  build_host.bat  build_host.sh  camera.c  camera.h  collision.c  collision.h  enemy.c  enemy.h  enemy_spawns.h  game.c  game.h  gfx.c  gfx.h  goomba_gfx.h  goomba_squished_gfx.h  goomba_walk1_gfx.h  goomba_walk2_gfx.h  input.c  input.h  level_data.h  linker.ld  main.c  mario_idle_gfx.h  mario_jump_gfx.h  mario_walk1_gfx.h  mario_walk2_gfx.h  palette.h  physics.c  physics.h  render.c  render.h  sprites.c  sprites.h  sprites_gfx.h  startup.S  supermario_host  tile_block_gfx.h  tile_brick_gfx.h  (+11 more)
software/bsp/: system.h
software/host/: README.md  framebuffer_host.c  framebuffer_host.h  keys_host.c  keys_host.h  main_host.c  palette.h  timer_host.c
software/hw/: framebuffer.c  framebuffer.h  hw_regs.h  keys.c  keys.h  timer.c  timer.h
tools/: gfx_to_c.py  sprite_to_c.py  tilemap_to_c.py
